# LabGG

./: main_exception_handling  main_exception_handling.cpp
UnitTesting/: CMakeLists.txt  main  main.cpp  node.h  test_node.cpp
